--- a/experiments/object-oriented-programming-experiments/index.html
+++ b/experiments/object-oriented-programming-experiments/index.html
@@ -14,7 +14,10 @@
     <script src="js/libraries/p5.sound.min.js"></script>
 
     <!-- My script(s) -->
+    <script src="js/Flower.js"></script>
     <script src="js/script.js"></script>
+
+
   </head>
 
   <body>
