--- a/projects/project2/prototype/index.html
+++ b/projects/project2/prototype/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
 
-    <title>CHANGE THIS TITLE IN INDEX.HTML!</title>
+    <title>Dodgeball</title>
 
     <!-- CSS stylesheet(s) -->
     <link rel="stylesheet" type="text/css" href="css/style.css" />
@@ -14,7 +14,13 @@
     <script src="js/libraries/p5.sound.min.js"></script>
 
     <!-- My script(s) -->
+    <script src="js/User.js"></script>
+    <script src="js/DodgeableItem.js"></script>
+    <script src="js/Brick.js"></script>
+    <script src="js/Dodgeball.js"></script>
+    <script src="js/Wrench.js"></script>
     <script src="js/script.js"></script>
+
   </head>
 
   <body>
