--- a/projects/project2/final/index.html
+++ b/projects/project2/final/index.html
@@ -14,11 +14,11 @@
     <script src="js/libraries/p5.sound.min.js"></script>
 
     <!-- My script(s) -->
-    <script src="js/User.js"></script>
-    <script src="js/DodgeableItem.js"></script>
-    <script src="js/Brick.js"></script>
-    <script src="js/Dodgeball.js"></script>
-    <script src="js/Wrench.js"></script>
+    <script src="js/UserL1.js"></script>
+    <script src="js/DodgeableItemL1.js"></script>
+    <script src="js/BrickL1.js"></script>
+    <script src="js/DodgeballL1.js"></script>
+    <script src="js/WrenchL1.js"></script>
     <script src="js/script.js"></script>
 
   </head>
