--- a/projects/project2/final/index.html
+++ b/projects/project2/final/index.html
@@ -14,6 +14,11 @@
     <script src="js/libraries/p5.sound.min.js"></script>
 
     <!-- My script(s) -->
+    <script src="js/SnakeL2.js"></script>
+    <script src="js/CobraL2.js"></script>
+    <script src="js/PurpleCobraL2.js"></script>
+    <script src="js/GreenCobraL2.js"></script>
+    <script src="js/UserL2.js"></script>
     <script src="js/UserL1.js"></script>
     <script src="js/DodgeableItemL1.js"></script>
     <script src="js/BrickL1.js"></script>
