--- a/projects/project2/final/index.html
+++ b/projects/project2/final/index.html
@@ -14,6 +14,7 @@
     <script src="js/libraries/p5.sound.min.js"></script>
 
     <!-- My script(s) -->
+    <script src="js/AwardL3.js"></script>
     <script src="js/SnakeL2.js"></script>
     <script src="js/CobraL2.js"></script>
     <script src="js/PurpleCobraL2.js"></script>
